# apipoller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindLibCURL.cmake
configurations/: test.json
inc/: APIPoller.h  CURLConnectionHandler.h  CURLHandler.h  GlobalIncludes.h  Utility.h
inc/Configuration/: BaseSettingsBuilder.h  Configuration.h  IConfigurationManager.h  ISettingsBuilder.h  JsonConfiguration.h  JsonConfigurationManager.h  JsonConfigurationReader.h
inc/Encoders/: IEncoder.h  UrlEncoder.h
inc/Http/: CurlHttpRequest.h  CurlHttpResponse.h  HTTP.h  HttpHeaders.h  HttpRequest.h  HttpRequestConfiguration.h  HttpResponse.h
inc/Http/Configuration/: HttpRequestSettings.h  IHttpSettingsBuilder.h
inc/Http/Curl/: CurlHttpRequest.h  CurlHttpResponse.h
inc/Http/Mappers/: HttpRequestConfigurationJsonMapper.h  HttpRequestSettingsJsonMapper.h  HttpRequestSettingsMapper.h
inc/Loggers/: ILogger.h  STDLogger.h
inc/Mappers/: DataMapper.h  JsonDataMapper.h  MapPollerConfiguration.h
inc/Pollers/: FactoryRegistry.h  IPollerFactory.h  ISettingsBuilderFactory.h  IStreamReader.h  Poller.h  PollerConfiguration.h  PollerFactory.h  PollerFactoryCreator.h  PollerSettingsFactoryCreator.h  SettingsFactory.h  TwitterCredentials.h  TwitterFactory.h  TwitterHttpStreamPoller.h  TwitterPoller.h  TwitterStreamReader.h
inc/Pollers/Configuration/: PollerSettings.h  PollerSettingsBuilder.h
inc/Pollers/Mappers/: PollerConfigurationJsonMapper.h  PollerSettingsMapper.h
inc/Signal/: CloseCURLSignalHandler.h  ISignalHandler.h  SignalManager.h
inc/TwitterPoller/: TwitterConfiguration.h  TwitterFactory.h  TwitterSettingsBuilderFactory.h
inc/TwitterPoller/Configuration/: ITwitterSettingsBuilder.h  TwitterSettings.h
inc/TwitterPoller/HttpStream/: TwitterHttpStreamConfiguration.h  TwitterHttpStreamPoller.h  TwitterStreamReader.h
inc/TwitterPoller/HttpStream/Configuration/: JsonTwitterStreamSettingsBuilder.h  TwitterHttpStreamSettings.h  TwitterStreamSettingsBuilder.h
inc/TwitterPoller/Mappers/: TwitterSettingsMapper.h
src/: APIPoller.cpp  CMakeLists.txt  CURLConnectionHandler.cpp  CURLHandler.cpp
src/Configuration/: JsonConfiguration.cpp  JsonConfigurationManager.cpp  JsonConfigurationReader.cpp
src/Encoders/: IEncoder.cpp  UrlEncoder.cpp
src/Http/: CurlHttpRequest.cpp  CurlHttpResponse.cpp  HttpHeaders.cpp  HttpRequest.cpp  HttpResponse.cpp
src/Http/Curl/: CurlHttpRequest.cpp  CurlHttpResponse.cpp
src/Loggers/: STDLogger.cpp
src/Pollers/: Poller.cpp  PollerFactoryCreator.cpp  PollerSettingsFactoryCreator.cpp  TwitterHttpStreamPoller.cpp  TwitterPoller.cpp  TwitterStreamReader.cpp
src/Pollers/Configuration/: PollerSettingsBuilder.cpp
src/Signal/: CloseCURLSignalHandler.cpp  SignalManager.cpp
src/TwitterPoller/HttpStream/: TwitterHttpStreamPoller.cpp  TwitterStreamReader.cpp
src/TwitterPoller/HttpStream/Configuration/: JsonTwitterStreamSettingsBuilder.cpp  TwitterStreamSettingsBuilder.cpp
test/: CMakeLists.txt  test-runner.cpp  testLogger.cpp
test/Logger/: STDLoggerTest.cpp
test/Mocks/: HttpRequestMock.h
test/Pollers/: TwitterCredendtialsTest.cpp  TwitterPollerTest.cpp
test/files/: goodJsonFile.json  testSettings.json
test/inc/Mocks/: CurlHandlerMock.h  CurlHandlerMock.h.h  EncoderMock.h  HttpRequestMock.h  StreamReaderMock.h
test/src/Configuration/: JsonConfigurationManagerTest.cpp  JsonConfigurationReader.cpp
test/src/Libraries/: JsonCPPAPITest.cpp
test/src/Pollers/: JsonTwitterStreamSettingsBuilderTest.cpp  TwitterCredendtialsTest.cpp  TwitterHttpStreamPollerTest.cpp  TwitterPollerTest.cpp
